# CodinGame

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
python/power-of-thor-episode-1/: pyproject.toml
python/power-of-thor-episode-1/src/: main.py
python/shadows-of-the-knight-episode-1/: pyproject.toml
python/shadows-of-the-knight-episode-1/src/: main.py
rust/back-to-the-code/: Cargo.toml
rust/back-to-the-code/src/: lib.rs
rust/code-vs-zombies/: Cargo.toml  justfile
rust/code-vs-zombies/src/: lib.rs  main.rs  math.rs  structs.rs  utils.rs
rust/death-first-search-episode-1/: Cargo.toml
rust/death-first-search-episode-1/src/: lib.rs
rust/mad-pod-racing/: Cargo.toml
rust/mad-pod-racing/legacy/: README.md
rust/temperatures/src/: lib.rs
rust/the-descent/: Cargo.toml
src/mad-pod-racing/: README.md  lib.rs
src/mad-pod-racing/legacy/bronze-to-gold/src/: lib.rs
src/mad-pod-racing/src/: lib.rs
src/mad-pot-racing/: lib.rs
src/the-descent/src/: lib.rs
typescript/there-is-no-spoon-episode-1/: .eslintrc.yml  package.json  tsconfig.json
typescript/there-is-no-spoon-episode-1/src/: index.ts
