[package]
name = "CodinGame-The-Descent"
description = "Code for the `The Descent` game"
authors = ["Dominique Roth <dominik@roth.systems>"]
homepage = "https://roth.systems/"
repository = "https://github.com/Dom-Roth/CodinGame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
